new way to generate schema